src/objects/ffbc__Job__c.object
<CustomObject>
    <customHelpPage>ffbc__jobhelp</customHelpPage>
    <description>Contains a single item to be processed as part of a task running in parallel queueable apex jobs. This enables you to monitor the progress of the task.</description>
    <fields>
        <fullName>ffbc__AsyncApexJobId__c</fullName>
        <description>Id of the asynchronous Apex job assigned to process this job.</description>
        <inlineHelpText>Id of the asynchronous Apex job assigned to process this job.</inlineHelpText>
        <label>Async Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__JobType__c</fullName>
        <label>Job Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__RecordId__c</fullName>
        <description>Id of the item to which this job corresponds.</description>
        <inlineHelpText>Id of the item to which this job corresponds.</inlineHelpText>
        <label>Item Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbc__Status__c</fullName>
        <description>Status of this job.</description>
        <inlineHelpText>Status of this job.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Retry</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>